@@ -1,3 +1,7 @@
+2021. 5.17. Abolished zeo_delaunay2d from applications. [app]
+2021. 5.17. Renamed zeo_delaunay2d to zeo_voronoi2d. [zeo, zeo_voronoi2d]
+2021. 5.17. Added zVoronoi2D. [zeo_delaunay2d]
+2021. 5.17. Added zDTTri2DListDestroy. [zeo_delaunay2d]
 2021. 5.16. Reflected new specification of zFDouble. [zeo_render_color, zeo_vec2d, zeo_mat2d, zeo_vec3d, zeo_vec6d, zeo_mat3d, zeo_frame3d, zeo_ph_ply, app]
 2021. 5.15. Added zeo_delaunay2d. [app]
 2021. 5.15. Corrected key for specular reflection in examples and zeo_qhull. [example, app]
